# ADC-Sensor

./: .gitignore  CMakeLists.txt  README.md  adc.c  adc.h  io.c  io.h  main.c  results.txt  stats.c  stats.h
